syntax = "proto3";

import "user.proto";

package pb;
// 生成的go文件
option go_package = "github.com/techschool/simplebank/pb";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}